kubernetes-lab/portfolio-app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: nginx
          image: nginx:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          volumeMounts:
            - name: frontend-files
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true

            - name: frontend-files
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true

      volumes:
        - name: frontend-files
          configMap:
            name: frontend-config

---
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30082
