kubernetes-lab/portfolio-app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: portfolio-gateway

spec:
  gatewayClassName: cloud-provider-kind

  listeners:
    - name: http
      protocol: HTTP
      port: 80
