kubernetes-lab/portfolio-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-route

spec:
  parentRefs:
    - name: portfolio-gateway

  hostnames:
    - "devops.local"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend
          port: 80
